    Iwasaki via Colin P. McCabe)

    HADOOP-11442. hadoop-azure: Create test jar.
    (Shashank Khandelwal via cnauroth)

    HADOOP-11544. Remove unused configuration keys for tracing. (Masatake
    Iwasaki via aajisaka)

    HADOOP-11492. Bump up curator version to 2.7.1. (Arun Suresh and
    Karthik Kambatla via kasha)

  OPTIMIZATIONS

    HADOOP-11323. WritableComparator#compare keeps reference to byte array.
    (Wilfred Spiegelenburg via wang)

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

    HADOOP-10809. hadoop-azure: page blob support. (Dexter Bradshaw,
    Mostafa Elhemali, Eric Hanson, and Mike Liddell via cnauroth)

    HADOOP-11188. hadoop-azure: automatically expand page blobs when they become
    full. (Eric Hanson via cnauroth)

  BUG FIXES

    HADOOP-11488. Difference in default connection timeout for S3A FS
    (Daisuke Kobayashi via harsh)

    HADOOP-11256. Some site docs have inconsistent appearance (Masatake 
    Iwasaki via aw)

    HADOOP-11318. Update the document for hadoop fs -stat (aajisaka)

    HADOOP 11400. GraphiteSink does not reconnect to Graphite after 'broken pipe' 
    (Kamil Gorlo via raviprak)

    HADOOP-11236. NFS: Fix javadoc warning in RpcProgram.java (Abhiraj Butala via harsh)

    HADOOP-11166. Remove ulimit from test-patch.sh. (wang)

    HDFS-7227. Fix findbugs warning about NP_DEREFERENCE_OF_READLINE_VALUE in
    SpanReceiverHost (cmccabe)

    HADOOP-11186. documentation should talk about
    hadoop.htrace.spanreceiver.classes, not hadoop.trace.spanreceiver.classes (cmccabe)

    HADOOP-11165. TestUTF8 fails when run against java 8.
    (Stephen Chu via cnauroth)

    HADOOP-10717. HttpServer2 should load jsp DTD from local jars instead of
    going remote. (Dapeng Sun via wheat9)

    HADOOP-11268. Update BUILDING.txt to remove the workaround for tools.jar.
    (Li Lu via wheat9)
