@@ -175,6 +175,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11492. Bump up curator version to 2.7.1. (Arun Suresh and
     Karthik Kambatla via kasha)
 
+    HADOOP-11463 Replace method-local TransferManager object with
+    S3AFileSystem#transfers. (Ted Yu via stevel)
+
   OPTIMIZATIONS
 
     HADOOP-11323. WritableComparator#compare keeps reference to byte array.
